--- a/myproject/static/appointment-style.css
+++ b/myproject/static/appointment-style.css
@@ -16,6 +16,7 @@ header {
     color: #fff;
     padding: 1rem 0;
     text-align: center;
+    width: 100%;
 }
 
 header h1 {
@@ -33,7 +34,7 @@ header h1 {
 }
 
 .form-group {
-    margin-bottom: 1rem;
+    margin-bottom: 1.2rem;
 }
 
 .form-group label {
@@ -49,6 +50,7 @@ header h1 {
     padding: 0.5rem;
     border: 1px solid #ddd;
     border-radius: 5px;
+    font-size: 1rem;
 }
 
 .form-group textarea {
@@ -86,7 +88,20 @@ header h1 {
 
 /* Optional: Add some space between buttons */
 .button-wrapper .btn {
-    width: 48%; /* Adjusts the size of the buttons */
+    width: 48%;
+    padding: 0.8rem 1.2rem;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    background: #333;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 1rem;
+    text-align: center;
+    transition: 0.3s;
+}
+.button-wrapper .btn:hover {
+    background: #717171;
 }
 
 .success-message {
@@ -97,4 +112,8 @@ header h1 {
     color: #155724;
     border: 1px solid #c3e6cb;
     border-radius: 5px;
+    text-align: center;
+}
+#otherOptions, #materialOptions{
+    display: none;
 }
