fixed appointment js

--- a/myproject/patients/templates/book_appointment.html
+++ b/myproject/patients/templates/book_appointment.html
@@ -14,7 +14,7 @@
     </header>
     <div class="container">
         <form id="appointmentForm">
-            <div class="form-group">
+            <div class="form-group"> 
                 <label for="date">Select Date:</label>
                 <input type="date" id="date" name="date" required>
             </div>
@@ -61,6 +61,6 @@
             Appointment booked successfully!
         </div>
     </div>
-    <script src="{% static 'appointments.js' %}"></script>
+    <script src="{% static 'appointment.js' %}"></script>
 </body>
 </html>
